--- a/Syllabus/Syllabus.tex
+++ b/Syllabus/Syllabus.tex
@@ -250,12 +250,11 @@ Academic Calendar} for more information.
 \hypertarget{required-textbooks}{%
 \subsection{Required Textbooks}\label{required-textbooks}}
 
-Dillon, Michele (2010).
-\emph{Introduction to Sociological Theory: Theorists, Concepts, and their Applicability to the Twenty-First Century, 3rd Edition}.
-Hoboken, NJ: Wiley \& Sons Ltd. ISBN: 9781119410911.
-
 \begin{itemize}
-\tightlist
+\item
+  Dillon M (2020). \emph{Introduction to Sociological Theory: Theorists,
+  Concepts, and their Applicabilityto the Twenty-First Century}, 3
+  edition. Wiley-Blackwell, Hoboken, NJ. ISBN 978-1-119-41091-1.
 \item
   We will be using the 3rd edition which looks
   \href{https://www.abebooks.com/Introduction-Sociological-Theory-Theorists-Concepts-Applicability/31208296728/bd?cm_mmc=ggl-_-US_Shopp_Textbook-_-product_id=COM9781119410911USED-_-keyword=\&gclid=Cj0KCQjwuO6WBhDLARIsAIdeyDLJvr2N_LKW1qd-49HuMemlLuCRQT4yR3PKWnmeqMDWBDwy9LNFFRUaAlcyEALw_wcB}{this}.
@@ -270,7 +269,7 @@ Readings}\label{additional-required-readings}}
 \tightlist
 \item
   Primary texts and other required readings will be available
-  electronically on the Blackboard Learn course page and on Perusall.
+  electronically on the Black Board course page and on Perusall.
 \end{itemize}
 
 \hypertarget{structure-and-character-of-a-chicoflex-course}{%
@@ -475,26 +474,29 @@ hours of outside time per week to this course.
 
 \newpage
 
-\hypertarget{attendance-and-class-participation-15-of-final-grade}{%
-\subsection{Attendance and Class Participation (15\% of Final
-Grade)}\label{attendance-and-class-participation-15-of-final-grade}}
+\hypertarget{attendance-and-class-participation-10-of-final-grade}{%
+\subsection{Attendance and Class Participation (10\% of Final
+Grade)}\label{attendance-and-class-participation-10-of-final-grade}}
 
 The format of this course is an interactive, ``live'' hybrid lecture and
 discussion with the objective of collaborative learning and analysis.
 Participation in class discussion is necessary for your development as a
-critical scholar and for your understanding of the course material. This
-is a \textbf{required} course with difficult reading material and,
-therefore, it is crucial to establish an informed and critical discourse
-with each other over the material. Participation includes contributions
-to class discussions either in class or via class assignments.
-Participation also includes actively listening, as well as sharing your
-ideas, criticisms, and frustrations with course material. To ensure
-active participation, students must come to class having read and taken
-notes on all material. Furthermore, you are expected to contribute to
-discussions either in class or via class assignments. Grading of all
-work is done with the expectation that attendance and participation will
-be rewarded in the final grade. Also, see ``COVID Directions'' (above)
-if you are symptomatic and an in-class student.
+critical scholar and for your understanding of the course material.
+Participation also includes consistent involvement in online interactive
+activities. These activities will occur periodically during class
+throughout the semester. This is a \textbf{required} course with
+difficult reading material and, therefore, it is crucial to establish an
+informed and critical discourse with each other over the material.
+Participation includes contributions to class discussions either in
+class or via class assignments. Participation also includes actively
+listening, as well as sharing your ideas, criticisms, and frustrations
+with course material. To ensure active participation, students must come
+to class having read and taken notes on all material. Furthermore, you
+are expected to contribute to discussions either in class or via class
+assignments. Grading of all work is done with the expectation that
+attendance and participation will be rewarded in the final grade. Also,
+see ``COVID Directions'' (above) if you are symptomatic and an in-class
+student.
 
 In addition to completing all of the assigned reading before each
 designated day of the week (see reading schedule below and make sure you
@@ -503,7 +505,6 @@ reflect on what is interesting/troubling/useful about what you have
 read. You are expected to do this work on your own. Be prepared to offer
 your questions, insights, and critique either via communication with me,
 writing assignments and/or in conversation with other students.
-
 \emph{These are questions you should consider as you complete each
 reading:} What are the authors' main objectives/research questions? What
 methods, if any, did the author use to explore this question? What are
@@ -535,19 +536,18 @@ At the beginning of the quarter, you will be assigned to groups in
 Perusall, each comprised of around 10-12 students. After week 2, you
 will be randomly placed into these groups and participate in
 asynchronous group reading and discussion, covering any major theme(s)s
-or issue(s) from the reading and lecture.
-
-You will each read and discuss within your group forum. This means that
-you must not only do the reading and annotate on your own, but you must
-ask and respond to one or more questions within your group that are
-related to that week's readings assignment(s) and lecture. Thus, you
-must interact in your group forum with at least two (2) of your
-groupmate's posts. Your contribution and annotations will be graded on a
-scale of 1 -- 3, with higher scores indicating higher quality
-annotations and responses. Your response to two or more groupmate's
-annotations and questions (due by 8:00 PM (Pacific Standard Time) on
-Friday of that week). \textbf{Discussion posts and annotations will be
-given credit only if they are substantive and follow all instructions.}
+or issue(s) from the reading and lecture. You will each read and discuss
+within your group forum. This means that you must not only do the
+reading and annotate on your own, but you must ask and respond to one or
+more questions within your group that are related to that week's
+readings assignment(s) and lecture. Thus, you must interact in your
+group forum with at least two (2) of your groupmate's posts. Your
+contribution and annotations will be graded on a scale of 1 -- 3, with
+higher scores indicating higher quality annotations and responses. Your
+response to two or more groupmate's annotations and questions (due by
+8:00 PM (Pacific Standard Time) on Friday of that week).
+\textbf{Discussion posts and annotations will be given credit only if
+they are substantive and follow all instructions.}
 
 For reading assignments in Perusall, you will be evaluated based on the
 following four criteria:
@@ -562,7 +562,8 @@ following four criteria:
   each reading document. I will then compute overall grade based on
   highest quality annotations.
 \item
-  Timeliness: You must complete the reading assignment by Friday 8:00PM.
+  Timeliness: You must complete the reading assignment by Friday 11:30
+  p.m.
 \item
   Distribution: Are annotations made throughout the document? If most
   annotations are made in a single area, it indicates the student did
@@ -595,41 +596,64 @@ Blackboard Learn every single day of the week. \emph{No quiz will be
 assigned the week a writing assignment is due.}
 
 \hypertarget{writing_assignments}{%
-\subsection{Three (3) Writing Assignments (25\% of Final
+\subsection{Four (4) Analytical Response Papers (60\% of Final
 Grade)}\label{writing_assignments}}
 
-Students will complete at least 3 small writing assignments throughout
-the course. These assignments will assess knowledge of the course
-material, critical thinking skills, and writing skills. Guidelines for
-the papers will be given out at least two weeks in advance. Papers will
-have a word limit, approx. 750 words (roughly 3 double-spaced pages),
-typed, 12-point font, 1-inch margins, Times New Roman (11-point Arial
-font is also appropriate). Proper grammar and APA citation of sources is
-expected. \textbf{No other format will be accepted.} Late papers will be
-deducted 20\% of its overall grade each day that it is overdue.
+Four papers will be assigned for the semester. The required response
+papers will answer either one or two questions posed by the professor
+based on the course readings and lectures. These assignments will assess
+knowledge of the course material, critical thinking skills, and writing
+skills. The papers will require you to be analytical and to reflect
+deeply on the theoretical works we will cover. Additional instructions
+about the response papers will be distributed in class during the second
+week of instruction.
+\textcolor{blue}{Each paper must be turned in no later than 11:30 p.m. on the day that it is due.}
+Moreover, please also note that you have options for each paper
+assignment; this means that for each paper assignment you can choose to
+write between two sets of theories. Moreover, you have the opportunity
+to re-write up to \textbf{two} of your first three lower-scored
+analytical response papers for a higher grade. If you decide to rewrite
+one or two lower-scored papers, these will be due in class on
+\textbf{Tuesday, December 13, 2022 (our ``final exam'' due date) no
+later than 11:59 p.m. (Pacific Standard Time).}
 
-\hypertarget{final-paper-30-of-final-grade}{%
-\subsection{Final Paper (30\% of Final
-Grade)}\label{final-paper-30-of-final-grade}}
+\textbf{Due dates for all papers are listed below:}
 
-Building upon the ideas you developed in the writing assignments and
-other assignments, you will write a \textbf{final 1,000 word (roughly 4
-double-spaced pages) paper for this class.} In this paper, you will
-apply, expand, or challenge theories we covered in class. In this paper,
-you will apply, expand, or challenge theory. If you apply theory, you
-will use one of the main theoretical frameworks we covered in the course
-to sociologically analyze a cultural artifact (examples: documentary
-film(s), popular film(s), popular music, magazines, novels, etc.; speak
-with me about the appropriate cultural artifact). If you expand theory,
-you will make an argument for the expansion of any theory we have
-covered in the course, thus making that theory better, more
-contemporary, and/or more inclusive. If you challenge theory, you will
-accurately describe the theory you are challenging, make an argument for
-how and why you are challenging the theory, and perhaps offer a new
-theory that might replace the theory you are challenging. Before you
-begin your paper, speak with me about your main ideas and outline for
-the paper. I will post a detailed rubric and example of an excellent
-Final Paper on Blackboard about a month before the due date.
+\renewcommand{\arraystretch}{1.15}
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+\textbf{Paper} & \textbf{Focus} & \textbf{Due Date} \\
+\midrule
+\endhead
+Paper \#1 & Structural Functionalist Theories & Sunday, Sept.~25 \\
+& & \\
+Paper \#2 & Symbolic Interactionism and the Work of & Sunday, Oct.~23 \\
+& Erving Goffman; \textbf{OR}, Elite, Neo-Marxist, & \\
+& and Critical Theories & \\
+& & \\
+Paper \#3 & Post-Structuralist Theory and the Work of & Sunday,
+Nov.~20 \\
+& Michel Foucault; \textbf{OR}, Pierre Bourdieu and & \\
+& Theories of Social/ Cultural Reproduction & \\
+& and Inequality & \\
+& & \\
+Paper \#4 & Theories of Race and Ethnicity; \textbf{OR}, & Tuesday,
+Dec.~13 \\
+& Feminist, Queer, and Intersectionality & \\
+& Theories & \\
+\bottomrule
+\end{longtable}
+
+\hypertarget{guidelines-for-papers}{%
+\subsubsection{Guidelines for papers}\label{guidelines-for-papers}}
+
+Papers will have a word limit, approximately 1000 words (roughly 4
+double-spaced pages), typed, 12-point font, 1-inch margins, Times New
+Roman (11-point Arial font is also appropriate). Proper grammar and APA
+citation of sources is expected. \textbf{No other format will be
+accepted.} Late papers will be deducted 20\% of its overall grade each
+day that it is overdue.
 
 \hypertarget{tips-and-tricks-for-good-writing}{%
 \subsubsection{Tips and tricks for good
@@ -649,18 +673,33 @@ have some distance from your writing and then revise.
 
 Prompt yourself with questions that have short, concrete answers.
 
-\hypertarget{late-work}{%
-\subsection{Late Work}\label{late-work}}
+\hypertarget{late-work-and-student-emergencies}{%
+\subsection{Late Work and Student
+Emergencies}\label{late-work-and-student-emergencies}}
 
-Participation in discussions (Perusall or otherwise) must be on time so
-that others can respond to your posts. Thus, \textbf{discussion posts
-will not be accepted late for any reason (no matter how good you think
-your reason is).} Quizzes, practice activities, and essay assignments
-are a bit different. If you must submit one of these assignments late,
-please contact me right away. The longer you wait, the less likely I am
-to accept the assignment. I reserve the right to refuse any late work,
-but keeping the lines of communication open is your best bet if you fall
-a little behind on an assignment.
+Generally, late papers, past due participation in Perusall or
+extra-credit work will \emph{not} be accepted in this course. However,
+there are some important exceptions to this rule. Whenever unexpected
+life challenges/emergencies or an illness interrupts your academic work,
+other measures will apply. If you are ill or face an emergency, you are
+asked to please notify the instructor immediately (via email or in
+person), and provide documentation of what has occurred to justify
+making-up your work or turning it in beyond it due date. Moreover, given
+the current COVID-19 pandemic, I am aware that your situation can change
+dramatically unexpectedly.
+\textcolor{red}{If you are facing any personal, medical, financial or other challenges that impact your academic work, please inform me right away and we will work out a solution to your problem. I will do my best to accommodate your situation and allow you to complete your work at a later time if you missed a deadline.}
+\textbf{\textcolor{red}{However, the longer you wait, the less likely I am to accept a late assignment. Furthermore, I reserve the right to refuse any late work thus, keeping the lines of communication open is your best bet if you fall a little behind on an assignment.}}
+
+The instructor's policy regarding late work is to give any student who
+is ill or has faced a \textbf{documented medical/personal emergency} the
+opportunity to make up his/her academic work \textbf{within one week of
+the absence.} Therefore, it is imperative that you discuss with the
+instructor any emergencies and/or problems in order to assist you in
+completing your coursework.
+\textcolor{red}{Please also note that if you foresee being absent due to a conflict with religious observance(s), you must notify the instructor of your prospective absence during the first week of classes.}
+
+If you have any questions, do not hesitate to discuss these issues with
+the instructor in person or via Black Board.
 
 \hypertarget{getting-help-and-communicating-with-your-professor}{%
 \section{Getting Help And Communicating With Your
@@ -755,18 +794,19 @@ Center} (530-898-6345) or
 Information on campus reporting obligations and other Title IX related
 resources are available here: www.csuchico.edu/title-ix
 
-\hypertarget{statement-of-inclusive}{%
-\subsection{Statement of Inclusive}\label{statement-of-inclusive}}
+\hypertarget{statement-of-commitment-to-diversity-equity-and-inclusion}{%
+\subsection{Statement of Commitment to Diversity, Equity, and
+Inclusion}\label{statement-of-commitment-to-diversity-equity-and-inclusion}}
 
 Education is transformative, and open intellectual inquiry is the
 foundation of a university education and a democratic society. In the
 spirit of shared humanity and concern for our community and world, the
-Department of Sociology faculty celebrate diversity as central to our
-mission and affirm our solidarity with those individuals and groups most
-at risk. In line with our departmental goals, we disavow all racism,
-xenophobia, homophobia, sexism, Islamophobia, anti-Semitism, classism,
-ableism, and hate speech or actions that attempt to silence, threaten,
-and degrade others.
+faculty of Chico State's Sociology Department celebrate diversity as
+central to our mission and affirm our solidarity with those individuals
+and groups most at risk. In line with our departmental goals, we disavow
+all racism, xenophobia, homophobia, sexism, Islamophobia, anti-Semitism,
+classism, ableism, and hate speech or actions that attempt to silence,
+threaten, and degrade others.
 
 As educators, we affirm that language and texts, films and stories help
 us to understand the experiences of others whose lives are different
@@ -786,14 +826,15 @@ Each of us arrives in the classroom with a multitude of life
 experiences, and we all learn in different ways. In designing this
 class, my intent has been to provide many different methods to practice
 and learn to support these different learning styles. In addition, while
-learning statistics, we will use a variety of examples for our data.
-Some examples will be simple and often use `made-up' data, while others
-deal with real data and statistics about important social issues. It is
-my hope that all materials in the class are respectful to people from
-all backgrounds including diversity in sex/gender, sexuality,
-disability, age, socioeconomic status, ethnicity/race, immigration
-status, veteran status, religion, and culture. I invite your feedback on
-this, and your suggestions are always welcome.
+learning social theory, we will use a variety of example to demonstrate
+their applicability. Some examples will be simple and often use
+`made-up' scenarios, while others deal with real life events and
+experiences about important social issues. It is my hope that all
+materials in the class are respectful to people from all backgrounds
+including diversity in sex/gender, sexuality, disability, age,
+socioeconomic status, ethnicity/race, immigration status, veteran
+status, religion, and culture. I invite your feedback on this, and your
+suggestions are always welcome.
 
 \hypertarget{undocumented-daca-or-ab-540-immigrant-students}{%
 \subsection{Undocumented, DACA, or AB-540 Immigrant
@@ -838,20 +879,20 @@ them to dialogue with their professors as we work to make our classrooms
 anti-racist and dignity-affirming spaces.
 
 \hypertarget{lgbtq-equality-statement}{%
-\subsection{LGBTQ Equality Statement}\label{lgbtq-equality-statement}}
+\subsection{LGBTQ+ Equality Statement}\label{lgbtq-equality-statement}}
 
 I am firmly committed to diversity and equality in all areas of campus
-life, including specifically members of the LGBTQ community. In this
+life, including specifically members of the LGBTQ+ community. In this
 class I will work to promote an anti-discriminatory environment where
 everyone feels safe and welcome. I recognize that discrimination can be
 direct or indirect and take place at both institutional and personal
-levels. I believe that such discrimination is unacceptable and I am
-committed to providing equality of opportunity for all by eliminating
-any and all discrimination, harassment, bullying, or victimization. The
-success of this policy relies on the support and understanding of
-everyone in this class. We all have a responsibility not to be offensive
-to each other, or to participate in, or condone harassment or
-discrimination of any kind.
+levels. I unequivocally believe that such discrimination is unacceptable
+and I am committed to providing equality of opportunity for all by
+eliminating any and all discrimination, harassment, bullying, or
+victimization. The success of this policy relies on the support and
+understanding of everyone in this class. We all have a responsibility
+not to be offensive to each other, or to participate in, or condone
+harassment or discrimination of any kind.
 
 \hypertarget{mental-health}{%
 \subsection{Mental health}\label{mental-health}}
@@ -1025,13 +1066,14 @@ Pantry}.
 \hypertarget{final-thoughts}{%
 \section{Final thoughts}\label{final-thoughts}}
 
-This document is a roadmap for our semester. We learn about the Earth
-together and our individual experiences shape how we interpret and value
-data. Like all your classes, you will get out what you put into this
-course. Asking for help from one another and your instructors is
+This document is a roadmap for our semester. We learn about social
+theory together and its applicability towards understanding our
+environment. Like all your classes, you will get out what you put into
+this course. Asking for help from one another and your instructors is
 important, don't be afraid to ask a question about something you don't
 know or if you want to check your knowledge about something you think
-you know.
+you know. Do not wait to ask for help! We are all here to learn; it is
+not a competition.
 
 \textbf{If this document is updated, a copy will be supplied to you via
 Black Board and changes will be announced in class.}
@@ -1040,48 +1082,63 @@ Black Board and changes will be announced in class.}
 
 \renewcommand{\arraystretch}{1.25}
 
-\begin{longtable}[]{@{}lccl@{}}
-\caption{Course Schedule.}\tabularnewline
+\hypertarget{course-and-reading-schedule}{%
+\section{Course and Reading
+Schedule}\label{course-and-reading-schedule}}
+
+The following is a tentative schedule for the Fall 2022 semester. It
+lists readings and due dates, and \textbf{may be subject to change.} Any
+changes will be announced in class and will be shown in Black Board
+immediately. Use this information to schedule accordingly. If you miss
+class, it is your responsibility to find out if any scheduling changes
+were made in class.
+
+Table \ref{tab:course_schedule} displays the course schedule for the
+Fall 2022 semester. It lists the days and weeks we will meet for
+lecture. \textbf{We will not meet during Fall Break (Nov.~21-25).}
+
+\begin{table}[!h]
+
+\caption{\label{tab:course_schedule}Course Schedule.}
+\centering
+\fontsize{10}{12}\selectfont
+\begin{tabular}[t]{llccc}
 \toprule
-Date & Class & Week & Lecture \\
+\textbf{Date} & \textbf{Weekday} & \textbf{Class} & \textbf{Week} & \textbf{Lecture}\\
 \midrule
-\endfirsthead
-\toprule
-Date & Class & Week & Lecture \\
-\midrule
-\endhead
-2022-08-23 & 1 & 1 & 1 \\
-2022-08-25 & 2 & 1 & 2 \\
-2022-08-30 & 3 & 2 & 3 \\
-2022-09-01 & 4 & 2 & 4 \\
-2022-09-06 & 5 & 3 & 5 \\
-2022-09-08 & 6 & 3 & 6 \\
-2022-09-13 & 7 & 4 & 7 \\
-2022-09-15 & 8 & 4 & 8 \\
-2022-09-20 & 9 & 5 & 9 \\
-2022-09-22 & 10 & 5 & 10 \\
-2022-09-27 & 11 & 6 & 11 \\
-2022-09-29 & 12 & 6 & 12 \\
-2022-10-04 & 13 & 7 & 13 \\
-2022-10-06 & 14 & 7 & 14 \\
-2022-10-11 & 15 & 8 & 15 \\
-2022-10-13 & 16 & 8 & 16 \\
-2022-10-18 & 17 & 9 & 17 \\
-2022-10-20 & 18 & 9 & 18 \\
-2022-10-25 & 19 & 10 & 19 \\
-2022-10-27 & 20 & 10 & 20 \\
-2022-11-01 & 21 & 11 & 21 \\
-2022-11-03 & 22 & 11 & 22 \\
-2022-11-08 & 23 & 12 & 23 \\
-2022-11-10 & 24 & 12 & 24 \\
-2022-11-15 & 25 & 13 & 25 \\
-2022-11-17 & 26 & 13 & 26 \\
-2022-11-29 & 27 & 15 & 27 \\
-2022-12-01 & 28 & 15 & 28 \\
-2022-12-06 & 29 & 16 & 29 \\
-2022-12-08 & 30 & 16 & 30 \\
+2022-08-23 & Tuesday & 1 & 1 & 1\\
+2022-08-25 & Thursday & 2 & 1 & 2\\
+2022-08-30 & Tuesday & 3 & 2 & 3\\
+2022-09-01 & Thursday & 4 & 2 & 4\\
+2022-09-06 & Tuesday & 5 & 3 & 5\\
+2022-09-08 & Thursday & 6 & 3 & 6\\
+2022-09-13 & Tuesday & 7 & 4 & 7\\
+2022-09-15 & Thursday & 8 & 4 & 8\\
+2022-09-20 & Tuesday & 9 & 5 & 9\\
+2022-09-22 & Thursday & 10 & 5 & 10\\
+2022-09-27 & Tuesday & 11 & 6 & 11\\
+2022-09-29 & Thursday & 12 & 6 & 12\\
+2022-10-04 & Tuesday & 13 & 7 & 13\\
+2022-10-06 & Thursday & 14 & 7 & 14\\
+2022-10-11 & Tuesday & 15 & 8 & 15\\
+2022-10-13 & Thursday & 16 & 8 & 16\\
+2022-10-18 & Tuesday & 17 & 9 & 17\\
+2022-10-20 & Thursday & 18 & 9 & 18\\
+2022-10-25 & Tuesday & 19 & 10 & 19\\
+2022-10-27 & Thursday & 20 & 10 & 20\\
+2022-11-01 & Tuesday & 21 & 11 & 21\\
+2022-11-03 & Thursday & 22 & 11 & 22\\
+2022-11-08 & Tuesday & 23 & 12 & 23\\
+2022-11-10 & Thursday & 24 & 12 & 24\\
+2022-11-15 & Tuesday & 25 & 13 & 25\\
+2022-11-17 & Thursday & 26 & 13 & 26\\
+2022-11-29 & Tuesday & 27 & 15 & 27\\
+2022-12-01 & Thursday & 28 & 15 & 28\\
+2022-12-06 & Tuesday & 29 & 16 & 29\\
+2022-12-08 & Thursday & 30 & 16 & 30\\
 \bottomrule
-\end{longtable}
+\end{tabular}
+\end{table}
 
 
 
